@@ -1,31 +1,31 @@
 <tal:language tal:condition="view/available">
-    <ul id="portal-languageselector"
-        tal:define="showFlags view/showFlags;
-                    languages view/languages;">
-        <tal:language repeat="lang languages">
-        <li tal:define="code lang/code;
-                        selected lang/selected;
-                        codeclass string:language-${code};
-                        current python: selected and 'currentLanguage ' or '';"
-            tal:attributes="class string:${current}${codeclass}">
-                <a href=""
-                   tal:define="flag lang/flag|nothing;
-                               name lang/native|lang/name;
-                               showflag python:showFlags and flag;"
-                   tal:attributes="href lang/url;
-                                   title name">
-                    <tal:flag condition="showflag">
-                        <img width="14"
-                             height="11"
-                             alt=""
-                             tal:attributes="src string:${view/portal_url}${flag};
-                                             alt name;
-                                             title name;" />
-                    </tal:flag
-                    ><tal:nonflag condition="python:not showflag"
-                                  replace="name">language name</tal:nonflag
-                    ></a>&nbsp;
-        </li>
-        </tal:language>
-    </ul>
+<ul id="portal-languageselector"
+    tal:define="showFlags view/showFlags;
+                languages view/languages;">
+    <tal:language repeat="lang languages">
+    <li tal:define="code lang/code;
+                    selected lang/selected;
+                    codeclass string:language-${code};
+                    current python: selected and 'currentLanguage ' or '';"
+        tal:attributes="class string:${current}${codeclass}">
+            <a href=""
+               tal:define="flag lang/flag|nothing;
+                           name lang/native|lang/name;
+                           showflag python:showFlags and flag;"
+               tal:attributes="href lang/url;
+                               title name">
+                <tal:flag condition="showflag">
+                    <img width="14"
+                         height="11"
+                         alt=""
+                         tal:attributes="src string:${view/portal_url}${flag};
+                                         alt name;
+                                         title name;" />
+                </tal:flag
+                ><tal:nonflag condition="python:not showflag"
+                              replace="name">language name</tal:nonflag
+                ></a>&nbsp;
+    </li>
+    </tal:language>
+</ul>
 </tal:language>
